--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1951808_is8jh1d8smk.css">
   </head>
   <body>
 
